# hallite3

./: .gitignore  CMakeLists.txt  MyBot.cpp  run_game.sh
hlt/: direction.hpp  flog.cpp  flog.hpp  game.cpp  game.hpp  game_map.cpp  game_map.hpp  log.cpp  map_cell.hpp  ship.hpp
src/: commander.h
